feat(core,cli): add Vector API preflight checks and doctor diagnostics (#1010)
Add isVectorApiAvailable and checkVectorApiPreflight assertions to
SimdCapability, and integrate safe probe into spector doctor diagnostics.

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>
Signed-off-by: Forge <forge@spectrayan.com>